<resources>
    <string name="app_name">QuickJobs</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="nextButton">Next</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_new_post">New Post</string>
    <string name="bottom_navigation_my_jobs">My Jobs</string>
    <string name="bottom_navigation_my_profile">My Profile</string>
    <string name="sign_in_button_text">sign in</string>
    <string name="anonymous_restriction_message_text">please sign in to continue</string>

    <string name="permission_denied_dialog_title">Permission Denied</string>
    <string name="permission_denied_dialog_message_location">enable location from settings</string>

    <string name="loading_data">loading...</string>

    <!--Top Action Bar Start-->
    <string name="profile_action_bar_settings_cog">Settings</string>
    <string name="home_action_bar_filter_jobs">Filter Jobs</string>
    <!--Top Action Bar End-->

    <!--Account Settings Start-->
    <string name="account_settings_is_user_anonymous_key">is_user_anonymous</string>
    <string name="account_settings_title">Account Preferences</string>
    <string name="low">Low</string>
    <string name="normal">Normal</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="account_settings_create_account_key">create_account</string>
    <string name="account_settings_reset_credentials_key">reset_credentials</string>
    <string name="account_settings_confirm_reset_credentials_key">confirm_reset_credentials</string>
    <string name="account_settings_reset_email_key">reset_email</string>
    <string name="account_settings_reset_password_key">reset_password</string>
    <string name="account_settings_dark_mode_key">dark_mode</string>
    <string name="account_settings_subscription_type_display_key">subscription_type_display</string>
    <string name="account_settings_upgrade_subscription_type_display_key">upgrade_subscription_type_display</string>
    <string name="account_settings_language_key">language</string>
    <string name="account_settings_general_notifications_key">general_notifications</string>
    <string name="account_settings_non_premium_jobs_push_notifications_key">non_premium_jobs</string>
    <string name="account_settings_time_sensitive_jobs_push_notifications_key">time_sensitive</string>
    <string name="account_settings_push_out_of_your_area_notifications_key">out_of_area_jobs</string>
    <string name="account_settings_messages_push_notifications_key">messages</string>
    <string name="account_settings_language_english_key">english</string>
    <string name="account_settings_language_spanish_key">spanish</string>
    <string name="account_settings_location_updates_key">location_updates</string>
    <string name="account_settings_image_resolution_key">image_resolution</string>
    <string name="account_settings_sign_out_key">sign_out</string>
    <string name="about_us_private_about_us">about_us</string>
    <string name="about_us_feed_back_key">feed_back</string>
    <string name="about_us_help_center_key">help_center</string>
    <string name="about_us_follow_us_on_twitter_key">follow_us_on_twitter</string>
    <string name="account_settings_delete_account_key">delete_account</string>

    <string name="account_settings_account_settings_title">Account Settings</string>
    <string name="account_settings_create_account">Create Account or Sign In</string>
    <string name="account_settings_update_email">Reset Email</string>
    <string name="account_settings_update_password">Reset Password</string>

    <string name="account_settings_general_title">General</string>
    <string name="account_settings_dark_mode">Dark Mode</string>

    <string name="account_settings_manage_subscription_title">Manage Subscription</string>
    <string name="account_settings_membership_type">Membership</string>
    <string name="account_settings_membership_basic">Basic</string>
    <string name="account_settings_membership_premium">Premium</string>
    <string name="account_settings_membership_upgrade">Upgrade now</string>

    <string name="account_settings_language_title">Language</string>
    <string name="account_settings_language">Language</string>
    <string name="account_settings_language_default_value">English</string>

    <string name="account_settings_notification_title">Notifications</string>
    <string name="account_settings_push_notifications">Push Notifications</string>
    <string name="account_settings_push_notifications_key">push_notifications</string>
    <string name="account_settings_general_push_notifications">General Reminders</string>
    <string name="account_settings_non_premium_jobs_push_notifications">Non Premium Jobs</string>
    <string name="account_settings_out_of_your_area_push_notifications">Jobs Out Of Area</string>
    <string name="account_settings_time_sensitive_jobs_push_notifications">Time Sensitive</string>
    <string name="account_settings_messages_push_notifications">Messages</string>


    <string name="account_settings_data_usage_title">Data Usage</string>
    <string name="account_settings_location_updates">Location Updates</string>
    <string name="account_settings_location_updates_summary_off">Off</string>
    <string name="account_settings_location_updates_summary_on">On</string>
    <string name="account_settings_picture_quality">Image Resolution</string>
    <string name="account_settings_picture_quality_summary_off">Low</string>
    <string name="account_settings_picture_quality_summary_on">High</string>

    <string name="account_settings_about_us_title">About Us</string>

    <string name="account_settings_about_us">About Us</string>
    <string name="account_settings_feed_back">FeedBack</string>
    <string name="account_settings_help_center">Help Center</string>
    <string name="account_settings_follow_us_on_twitter">Follow us on Twitter</string>

    <string name="account_settings_sign_out">Log Out</string>


    <string name="account_settings_delete_account">Delete Account</string>
    <string name="delete_account_confirm_password_key">confirm_password</string>
    <string name="delete_account_confirm_delete_account_key">delete_account</string>
    <string name="delete_account_confirm_password">Confirm Password</string>
    <string name="delete_account_confirm_delete_account">Delete</string>
    <string name="reset_credentials_reset">reset</string>
    <string name="reset_credentials_enter_current_email">enter current email</string>
    <string name="reset_credentials_enter_new_email">enter new email</string>
    <string name="reset_credentials_enter_password">enter password</string>
    <string name="reset_credentials_enter_new_password">new password</string>
    <string name="splash_screen_title">Splash Screen</string>

    <!--Account Settings End-->

</resources>
