<PreferenceScreen
    app:key="account_preferences"
    android:fragment="com.example.quickjobs.view.settings.AccountSettingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/account_settings_account_settings_title">
        <Preference
            app:key="@string/account_settings_create_account_key"
            app:title="@string/account_settings_create_account"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings_general_title">
        <SwitchPreference
            app:key="@string/account_settings_dark_mode_key"
            app:title="@string/account_settings_dark_mode"
            app:switchTextOn="@string/on"
            app:switchTextOff="@string/off"
            android:defaultValue="false"
            app:summaryOn="@string/account_settings_location_updates_summary_on"
            app:summaryOff="@string/account_settings_location_updates_summary_off"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings_language_title">
        <ListPreference
            app:title="@string/account_settings_language"
            app:entries="@array/supported_languages_entries"
            android:key="@string/account_settings_language_key"
            app:entryValues="@array/supported_languages_entries"
            app:defaultValue="@string/account_settings_language_default_value"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings_notification_title">
        <Preference
            app:title="@string/account_settings_push_notifications"
            app:fragment="com.example.quickjobs.view.settings.PushNotificationsFragment"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings_data_usage_title">
        <SwitchPreference
            app:key="@string/account_settings_location_updates_key"
            app:title="@string/account_settings_location_updates"
            app:switchTextOff="@string/low"
            app:switchTextOn="@string/normal"
            android:defaultValue="true"
            app:summaryOn="@string/account_settings_location_updates_summary_on"
            app:summaryOff="@string/account_settings_location_updates_summary_off"/>
        <SwitchPreference
            android:key="@string/account_settings_image_resolution_key"
            app:title="@string/account_settings_picture_quality"
            app:switchTextOff="@string/low"
            app:switchTextOn="@string/normal"
            android:defaultValue="true"
            app:summaryOn="@string/account_settings_picture_quality_summary_on"
            app:summaryOff="@string/account_settings_picture_quality_summary_off"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/account_settings_about_us_title">
        <Preference
            app:key="@string/about_us_private_about_us"
            app:title="@string/account_settings_about_us"
            app:fragment="com.example.quickjobs.view.settings.AboutUsFragment"
            />

        <Preference
            app:key="@string/about_us_feed_back_key"
            app:title="@string/account_settings_feed_back"/>

        <Preference
            app:key="@string/about_us_help_center_key"
            app:title="@string/account_settings_help_center"
            app:fragment="com.example.quickjobs.view.settings.HelpCenterFragment"/>
    </PreferenceCategory>

</PreferenceScreen>