<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_margin="50dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.settings.ResetEmailFragment">

    <EditText
        android:id="@+id/enter_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reset_credentials_enter_current_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/confirm_credentials"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/confirm_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reset_credentials_enter_new_email"
        app:layout_constraintTop_toBottomOf="@id/enter_credentials"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/reset_credentials_button"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/reset_credentials_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_credentials_reset"
        app:layout_constraintTop_toBottomOf="@id/confirm_credentials"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>